For atspi_collection_get_matches_to, rename restrict to limit_scope

Restrict can be a keyword. Don't use it as a variable name.
Also update D-Bus introspection.

https://bugzilla.gnome.org/show_bug.cgi?id=669344