atspi/atspi-collection.c
@@ -166,7 +166,7 @@ atspi_collection_get_matches (AtspiCollection *collection,
  * @tree: An #AtspiCollectionTreeTraversalType specifying restrictions on
  *        the objects to be traversed.
  *
- * @restrict: If #TRUE, only descendants of @current_object's parent
+ * @limit_scope: If #TRUE, only descendants of @current_object's parent
  * will be returned. Otherwise (if #FALSE), any accessible may be returned
  * if it would preceed @current_object in a flattened hierarchy.
  *
@@ -187,7 +187,7 @@ atspi_collection_get_matches_to (AtspiCollection *collection,
                               AtspiMatchRule *rule,
                               AtspiCollectionSortOrder sortby,
                               AtspiCollectionTreeTraversalType tree,
-                              gboolean restrict,
+                              gboolean limit_scope,
                               gint count,
                               gboolean traverse,
                               GError **error)
@@ -196,7 +196,7 @@ atspi_collection_get_matches_to (AtspiCollection *collection,
   DBusMessage *reply;
   dbus_int32_t d_sortby = sortby;
   dbus_int32_t d_tree = tree;
-  dbus_bool_t d_restrict = restrict;
+  dbus_bool_t d_limit_scope = limit_scope;
   dbus_int32_t d_count = count;
   dbus_bool_t d_traverse = traverse;
 
@@ -209,7 +209,7 @@ atspi_collection_get_matches_to (AtspiCollection *collection,
     return NULL;
   dbus_message_append_args (message, DBUS_TYPE_UINT32, &d_sortby,
                                      DBUS_TYPE_UINT32, &d_tree,
-                            DBUS_TYPE_BOOLEAN, &d_restrict,
+                            DBUS_TYPE_BOOLEAN, &d_limit_scope,
                             DBUS_TYPE_INT32, &d_count,
                             DBUS_TYPE_BOOLEAN, &d_traverse,
                             DBUS_TYPE_INVALID);
